# mlcookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: README.md
{{cookiecutter.repo_name}}/: README.md  pyproject.toml
